Prevent jumping of menu items on expand

--- a/src/main/resources/assets/css/treeview.css
+++ b/src/main/resources/assets/css/treeview.css
@@ -10,17 +10,19 @@ ul.listree {
 ul.listree-submenu-items {
     list-style: none;
     white-space: nowrap;
-    padding-left: 10px
+    padding-left: 10px;
 }
 
 div.listree-submenu-heading.collapsed:before {
     content: "\25B6";
-    margin-right: 4px
+    display: inline-block;
+    min-width: 20px;
 }
 
 div.listree-submenu-heading.expanded:before {
     content: "\25BC";
-    margin-right: 4px
+    display: inline-block;
+    min-width: 20px;
 }
 
 .scrollable-menu {
